Fixed bug #27042 (SPL: SeekableIterator seek() broken).